<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/hometitle"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="cursive"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0E0103"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="176dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/mainimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hometitle"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/entrees"
        android:layout_width="72dp"
        android:layout_height="92dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="casual"
        android:text="@string/entrees"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/plats"
        android:layout_width="71dp"
        android:layout_height="95dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="casual"
        android:text="@string/plats"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/entrees" />

    <TextView
        android:id="@+id/desserts"
        android:layout_width="67dp"
        android:layout_height="90dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="casual"
        android:text="@string/desserts"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toEndOf="@+id/plats" />


</androidx.constraintlayout.widget.ConstraintLayout>